--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @media (min-width: 768px) {
   /* Safari desktop hack */
   [data-is-layer-drawer="true"] .MuiPaper-root {
